--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "web-vitals": "^1.1.1"
   },
   "scripts": {
+    "prettier:fix": "prettier --write .",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
@@ -36,5 +37,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "prettier": "2.2.1"
   }
 }
